--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "Tree-ro",
+  "name": "battleships",
   "version": "1.0.0",
-  "description": "description",
+  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
